Update and rename INDEX.html to index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ The following are the skills pursued at Faz ict school.
  <li>information systems fundamentals</li>
  <li>mathematics in information technology</li>
 </ul>
-
+<img src="IMG-20251031-WA0025.jpg"> width="300"height="300"
 <p><b>The table showing the courses and the time allocation</b></p>
 
 <table border="1">
@@ -89,3 +89,4 @@ information filled in right and apprived thank you .am looking forwad to seeing 
 </html>
 
  
+
