--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 <p>ABOUT US</p>
 <video src="FAX.mp4"width="200"height="300"poster="video"controls autoplay>
 </video><br><br>
-<img src="LET.jpg"width="200"height="300"><br><br>
+<img src="IMG-20251031-WA0028.jpg"width="200"height="300"><br><br>
 <audio controls><br><br>
 <source src="FAZ.mp3"type="audio/mpeg">
 </audio>
 </body>
+
 </html>
