Fix HTML structure and update content
The HTML structure was corrected, including fixing tags and attributes. The content was also updated for clarity and accuracy.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet"href="pat.css">
 </head>
 <body>
-           <b>FAZ ICT SCHOOL</b> 
+<b>FAZ ICT SCHOOL</b> 
 <section>The Faz ict school aims at equiping students with technology related skills in the field
 .it is located along Ishaka-Kagamba road opposite the newly established centenary bank on plot 
 44.</section>
@@ -18,7 +18,6 @@ The following are the skills pursued at Faz ict school.
 </ul>
 <img src="IMG-20251031-WA0025.jpg"> width="300"height="300"
 <p><b>The table showing the courses and the time allocation</b></p>
-
 <table border="1">
  <th>time</th>
  <th>course code</th>
@@ -67,21 +66,16 @@ information filled in right and apprived thank you .am looking forwad to seeing 
   <option>masters degree</option>
 </select>
 </p>
-  
-  
-  <p>marital status:<input type="text"list="marstatus"name "marital status">
+<p>marital status:<input type="text"list="marstatus"name "marital status">
   <datalist id="marstatus">
   <option value="single">
   <option value="married">
   <option value="other">
   </datalist>
  <button type="submit">register</button> <br><br>
-<a href="page2.html">about us link</a>
-<marquee>for more information contact us on +256 767916420.email us on akankundapatricia@gmail.com.
-,facebook faz ict school.com.</marquee>
- 
-
-</form>
+<a href="page.html">about us link</a>
+<marquee>for more information contact us on +256 767916420.email us on akankundapatricia@gmail.com.,facebook faz ict school.com.</marquee>
+ </form>
 
 
 <body style="background-image: url(LET2.jpg)";>
@@ -89,4 +83,5 @@ information filled in right and apprived thank you .am looking forwad to seeing 
 </html>
 
  
+
 
