--- a/page.html
+++ b/page.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet"href="pat1.css">
 <body>
 <p>ABOUT US</p>
+  <img src="download (14).jpg"width="100"height="200">
   <p> Welcome to Faz ict school, a center of excellence in information and communication technology.</p>
 <p> We are committed to empowering learners with modern digital skills that prepare them for today's fast growing technological world. Our programs are designrd to build hands on experience, creativity, innovation and problem solving abilities among students of all ages</p>
 <video src="FAX.mp4"width="200"height="300"poster="video"controls autoplay>
@@ -15,5 +16,6 @@
 </body>
 
 </html>
+
 
 
